# github

./: .envrc  .gitattributes  .gitignore  .gitmodules  .lintstagedrc.cjs  .prettierignore  .tool-versions  AGENTS.md  Makefile  README.md  REUSE.toml  eslint.config.cts  package.json  pylock.toml  pyproject.toml  renovate.json5  requirements.txt  vitest.config.ts
.agents/: .lintstagedrc.cjs  .prettierignore  AGENTS.md
.agents/.github/: renovate.json5
.agents/.share/: .editorconfig  .lintstagedrc.cjs  .prettierrc.cjs  git-conventional-commits.yaml  pyproject.toml
.github/: dependabot.yml  renovate.json5
.github/workflows/: build.yml  central-publish.yml  format.yml  full.yml  gh-publish.yml  gp-publish.yml  ktlint.yml  license.yml  maven.yml  node-cli.yml  pre-commit.yml  prettier.yml  test.yml  tool-versions.yml  update-java.yml  yarn.yml
.share/: .gitattributes  .gitignore  .lintstagedrc.cjs  .prettierignore  .tool-versions  AGENTS.md  eslint.config.cts  package.json  renovate.json5  tsconfig.eslint.json
.share/.agents/: .gitignore  .prettierrc.cjs  REUSE.toml  package.json  pyproject.toml
git/hooks/: post-checkout  pre-commit
node/merge/: merge.ts
skills/coding-standards/: SKILL.md
skills/commit-message/: SKILL.md
skills/commit-or-pr-message/: SKILL.md
skills/general-programming/: SKILL.md
skills/github/: SKILL.md
skills/gradle/: SKILL.md
skills/java/: SKILL.md
skills/pull-request/: SKILL.md
skills/session-init/: SKILL.md
workflows/: build.yml  full.yml  gh-publish.yml  gp-publish.yml  pre-commit.yml  publish.yml  update-java.yml
(+51 files in other folders)
