# SPDX-FileCopyrightText: Copyright © 2025, 2026 Caleb Cushing
#
# SPDX-License-Identifier: CC0-1.0

[project]
name = "spring-app-commons-tools"
version = "0.0.0"
description = "Local tooling dependencies (managed via pip-compile)."
dependencies = ["reuse>=6"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
