# SPDX-FileCopyrightText: Copyright © 2026 Caleb Cushing
#
# SPDX-License-Identifier: CC0-1.0

[project]
name = "github-workflows"
version = "0.1.0"
description = "Local tooling configuration for this repository's GitHub workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["reuse>=6.2.0"]
